network-policy/temp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-pod
  labels:
    env: node-1
spec:
  containers:
  - name: nginx
    image: nginx
    
    # ports:
    # - containerPort: 80
