network-policy/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      env: node-1
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    # - namespaceSelector:
    #     matchLabels:
    #       project: myproject
    - podSelector:
        matchLabels:
          env: controlplane
    ports:
    - protocol: TCP
      port: 80
  # egress:
  # - to:
    # - ipBlock:
    #     cidr: 10.0.0.0/24
    # ports:
    # - protocol: TCP
    #   port: 5978
